--- a/curriculum-vitae.org
+++ b/curriculum-vitae.org
@@ -106,7 +106,7 @@
 ** Personal Statement Amazon :ignore:
 #+begin_export latex
  \begin{quote}
- ``Je suis un ingénieur informatique intéressé par le développements d'APIs.''
+ ``Je suis un ingénieur informatique intéressé par le développements backend et les technologies.''
  \end{quote}
 #+end_export
 ** Experience
@@ -120,7 +120,7 @@ Développement de solutions logicielles sur mesure pour des clients industriels 
 {{{cvtag(API C#/.NET EntityFramework)}}}
 {{{cvtag(API TypeScript MongoDB)}}}
 
-*** Teaching Assistant :ignore:
+*** Stages :ignore:
 {{{par-div}}}
 {{{cvevent(Teaching Assistant, University of Bristol,Sept 2018 -- Ongoing, Bristol\, UK)}}}
 
